<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pixel_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- 标题 -->

    <!-- 用户名输入框 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/pixel_edittext_background"
        android:hint="@string/username"
        android:inputType="textNoSuggestions"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA" />

    <!-- 密码输入框 -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/pixel_edittext_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA" />

    <!-- 登录按钮 -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <!-- 注册按钮 -->
    <Button
        android:id="@+id/btn_registry"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="#FFFFFF" />

</LinearLayout>