<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jetchan.dev.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_task"
        android:name="com.jetchan.dev.ui.task.TaskFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/nav_organization"
        android:name="com.jetchan.dev.ui.organization.OrganizationFragment"
        android:label="@string/menu_organization"
        tools:layout="@layout/fragment_organization" />
</navigation>