<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.organization.OrganizationFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_organization"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_joinOrg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/no_org_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/no_org"
        android:textSize="18sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_joinOrg"/>

    <Button
        android:id="@+id/btn_joinOrg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/join_organization"
        app:layout_constraintBottom_toTopOf="@id/btn_createOrg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_createOrg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_organization"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>