<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/rounded_dialog_background">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_goneMarginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/v_org_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rowCount="2"
        app:columnCount="2"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/dialog_desc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_column="0"
            app:layout_gravity="center_vertical|right"
            app:layout_row="0" />

        <EditText
            android:id="@+id/dialog_input_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="0" />

        <TextView
            android:id="@+id/dialog_desc_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:maxLines="1"
            app:layout_column="0"
            app:layout_gravity="center_vertical|right"
            app:layout_row="1" />

        <Spinner
            android:id="@+id/dialog_spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/dialog_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/v_org_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_cancel"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/dialog_ok"
        app:layout_constraintStart_toEndOf="@+id/dialog_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="8dp" />



</androidx.constraintlayout.widget.ConstraintLayout>